chore: set restart: always in docker-compose

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - redis
     extra_hosts:
       - "host.docker.internal:host-gateway"
+    restart: always
 
   redis:
     image: "redis:latest"
+    restart: always
