--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -18,6 +18,14 @@ dependencies:
   email_validator: ^2.0.1
   qr_code_scanner: ^0.7.0
   cupertino_icons: ^1.0.2
+  google_fonts: ^2.3.1
+  sqflite: ^2.0.2
+  auto_size_text: ^3.0.0
+  flutter_native_splash: ^2.1.1
+  connectivity_plus: ^2.2.1
+  go_router: ^3.0.5
+  card_swiper: ^2.0.3
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -26,8 +34,14 @@ dev_dependencies:
   flutter_lints: ^1.0.0
 
 flutter:
-
   uses-material-design: true
+
+  assets:
+    - assets/images/
+    - assets/images/banner/
+    - assets/images/button/
+    - assets/images/slider/
+
   fonts:
     - family: FZFYSJW
       fonts:
@@ -36,3 +50,7 @@ flutter:
     - family: Vladimir
       fonts:
         - asset: assets/fonts/Vladimir.ttf
+
+    - family: NSSC
+      fonts:
+        - asset: assets/fonts/NSSC.otf
