--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   go_router: ^3.0.5
   card_swiper: ^2.0.3
   uuid: ^3.0.6
+  device_info_plus: ^3.2.2
 
 dev_dependencies:
   flutter_test:
