--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -21,7 +21,6 @@ dependencies:
   google_fonts: ^2.3.1
   sqflite: ^2.0.2
   auto_size_text: ^3.0.0
-  flutter_native_splash: ^2.1.1
   connectivity_plus: ^2.2.1
   go_router: ^3.0.5
   card_swiper: ^2.0.3
@@ -31,8 +30,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^1.0.0
+  flutter_native_splash: ^2.1.1
 
 flutter:
   uses-material-design: true
@@ -55,3 +54,8 @@ flutter:
     - family: NSSC
       fonts:
         - asset: assets/fonts/NSSC.otf
+
+flutter_native_splash:
+  background_image: "assets/images/splash.png"
+  web: false
+  fullscreen: true
