backend: refactor model init

--- a/backend/env/.env
+++ b/backend/env/.env
@@ -1,6 +1,8 @@
 DEPLOY="docker"
 LISTEN_ADDR="0.0.0.0:8080"
 DB_NAME="museum"
+TEST_USER_EMAIL="test@test.com"
+TEST_USER_PSWD="123123"
 MYSQL_HOST="root"
 MYSQL_ADDR_HOST="127.0.0.1:3306"
 MYSQL_ADDR_DOCKER="host.docker.internal:3306"
