--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   card_swiper: ^2.0.3
   uuid: ^3.0.6
   device_info_plus: ^3.2.2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +47,10 @@ flutter:
     - family: FZFYSJW
       fonts:
         - asset: assets/fonts/FZFYSJW.ttf
+
+    - family: FZFYKSJZ
+      fonts:
+        - asset: assets/fonts/FZFYKSJZ.ttf
 
     - family: Vladimir
       fonts:
