--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   uuid: ^3.0.6
   device_info_plus: ^3.2.2
   flutter_spinkit: ^5.1.0
+  cached_network_image: ^3.2.0
+  flutter_staggered_grid_view: ^0.6.1
 
 dev_dependencies:
   flutter_test:
