--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -12,16 +12,16 @@ dependencies:
   flutter:
     sdk: flutter
   grpc: ^3.0.0
-  flutter_login: ^2.0.0-nullsafety.0
+  flutter_login: ^3.2.0
   bottom_navy_bar : ^6.0.0
   fluttertoast: ^8.0.6
   email_validator: ^2.0.1
   qr_code_scanner: ^0.7.0
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
-  sqflite: ^2.0.2
+#  sqflite: ^2.0.2
   auto_size_text: ^3.0.0
-  connectivity_plus: ^2.2.1
+#  connectivity_plus: ^2.2.1
   go_router: ^3.0.5
   card_swiper: ^2.0.3
   uuid: ^3.0.6
