--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   grpc: ^3.0.0
+  provider: ^6.0.2
   flutter_login: ^3.2.0
   bottom_navy_bar : ^6.0.0
   fluttertoast: ^8.0.6
@@ -31,6 +32,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.6.1
   material_design_icons_flutter: 5.0.6595
   line_awesome_flutter: ^2.0.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
