--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -11,6 +11,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   grpc: ^3.0.0
   provider: ^6.0.2
   flutter_login: ^3.2.0
@@ -56,6 +58,7 @@ flutter:
     - assets/images/banner/
     - assets/images/button/
     - assets/images/slider/
+    - assets/protocols/
 
   fonts:
     - family: FZFYSJW
