--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,7 +47,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   remove_alpha_ios: true
-  image_path: "assets/images/logo-1.png"
+  image_path: "assets/images/logo.png"
   adaptive_icon_background: "#FFFFFF"
 
 flutter:
