--- a/backend/env/.env
+++ b/backend/env/.env
@@ -9,5 +9,6 @@ MYSQL_ADDR_DOCKER="host.docker.internal:3306"
 REDIS_ADDR_UNIX="127.0.0.1:6379"
 REDIS_ADDR_WIN="192.168.119.128:6379"
 REDIS_ADDR_DOCKER="redis:6379"
+MEILI_ADDR="http://meili:7700"
 TENCENT_CDN="https://museum-1257461215.file.myqcloud.com"
 TENCENT_COS_BUCKET="https://museum-1257461215.cos.ap-nanjing.myqcloud.com"
