chore: enable grpc authentication

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assets/images/bar/
     - assets/protocols/
     - assets/expo/
+    - assets/tls/
 
   fonts:
     - family: FZFYSJW
