--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
   auto_size_text: ^3.0.0
-  connectivity_plus: ^2.2.1
+# connectivity_plus: ^2.2.1
   go_router: ^3.0.5
   card_swiper: ^2.0.3
   uuid: ^3.0.6
