--- a/frontend/android/app/src/main/AndroidManifest.xml
+++ b/frontend/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ares.zone.museum">
+    package="com.example.app">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="博物馆"
